--- a/style/style.css
+++ b/style/style.css
@@ -61,28 +61,9 @@ img {
   background-repeat: no-repeat;
   background-size: cover;
   padding-top: 60px;
-  padding-bottom: 60px;
-  padding-left: 60px;
-  padding-right: 60px;
-}
-@media (max-width: 1439px) {
-  .header {
-    padding-left: 60px;
-    padding-right: 60px;
-  }
-}
-@media (max-width: 1023px) {
-  .header {
-    padding-left: 30px;
-    padding-right: 30px;
-  }
-}
-@media (max-width: 767px) {
-  .header {
-    padding-left: 16px;
-    padding-right: 16px;
-    padding-bottom: 80px;
-  }
+  padding-bottom: 20px;
+  padding-left: 85px;
+  padding-right: 110px;
 }
 .header_top {
   display: flex;
@@ -120,6 +101,7 @@ img {
   display: flex;
   flex-wrap: nowrap;
   gap: 12px;
+  margin-top: 10px;
 }
 .header_menuItem {
   text-decoration: none;
@@ -132,17 +114,18 @@ img {
   letter-spacing: 1px;
   text-transform: uppercase;
   background: #1d1d1f;
-  padding: 2px 40px;
+  padding: 2px 38px;
   border-radius: 15px;
 }
 .header_bottom {
   display: flex;
   width: 100%;
-  padding-left: 20px;
+  padding-left: 100px;
 }
 .header_left {
   width: 50%;
-  margin-top: 400px;
+  margin-top: 270px;
+  padding-right: 10px;
 }
 .header_right {
   width: 50%;
@@ -195,15 +178,9 @@ img {
   align-items: center;
   text-transform: uppercase;
   width: 100%;
-  max-width: 1600px;
+  max-width: 1779px;
   padding: 0 60px;
   padding-bottom: 129px;
-}
-@media (max-width: 767px) {
-  .about {
-    padding: 0 16px;
-    padding-bottom: 120px;
-  }
 }
 .about_title {
   align-self: flex-end;
@@ -226,6 +203,7 @@ img {
   font-weight: 400;
   line-height: 60px;
   width: 100%;
+  max-width: 1407px;
 }
 @media (max-width: 1023px) {
   .about_text {
@@ -246,6 +224,7 @@ img {
   max-width: 1600px;
   width: 100%;
   padding: 0 60px;
+  margin-top: 140px;
 }
 .mission_title {
   color: #fff;
@@ -259,12 +238,12 @@ img {
 }
 .mission_text {
   padding: 88px 68px;
-  margin-top: 160px;
+  margin-top: 172px;
   border-radius: 10px;
   border: 1px solid #000;
   background: #43b446;
   width: 100%;
-  max-width: 1171px;
+  max-width: 1200px;
   color: #fff;
   text-align: center;
   font-size: 38px;
@@ -275,11 +254,12 @@ img {
 }
 
 .feature {
-  margin-top: 100px;
+  margin-top: 170px;
   width: 100%;
   background: url("../img/feature-bg.png");
   background-size: cover;
   background-repeat: no-repeat;
+  background-position-y: 180px;
 }
 .feature_container {
   width: 100%;
@@ -289,7 +269,7 @@ img {
 .feature_title {
   color: #fff;
   text-align: center;
-  font-size: 40px;
+  font-size: 50px;
   font-style: normal;
   font-weight: 400;
   line-height: 65px; /* 150% */
@@ -301,14 +281,8 @@ img {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  margin-top: 300px;
+  margin-top: 220px;
   list-style: none;
-}
-.feature_line-wrapper {
-  display: flex;
-  justify-content: space-between;
-  width: 1500px;
-  margin-top: 200px;
 }
 .feature_item {
   display: flex;
@@ -332,17 +306,25 @@ img {
 }
 .feature_item-1 {
   align-self: flex-start;
-  margin-left: 150px;
+  margin-left: 180px;
 }
 .feature_item-2 {
-  margin-top: 150px;
+  margin-top: 400px;
+  margin-left: 236px;
+}
+.feature_line-wrapper {
+  display: flex;
+  justify-content: space-between;
+  width: 1273px;
+  margin-top: 38px;
+  margin-left: 334px;
 }
 
 .roadmap {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 70px;
+  margin-top: 517px;
   width: 100%;
 }
 .roadmap_title {
@@ -385,8 +367,8 @@ img {
   align-items: flex-start;
   position: relative;
   width: 100%;
-  padding-top: 160px;
-  padding-bottom: 160px;
+  padding-top: 377px;
+  padding-bottom: 143px;
 }
 .coming_link {
   position: relative;
@@ -400,19 +382,40 @@ img {
   border-radius: 10px;
   border: 1px solid #fff;
   background: #43b446;
-  padding: 20px 60px;
+  padding: 20px 95px;
   margin-left: 184px;
 }
 .coming_link img {
   position: absolute;
   bottom: -160px;
-  right: -60px;
+  right: -15px;
 }
 .coming_screen {
+  position: relative;
   align-self: flex-end;
+  margin-top: -20px;
+  right: -120px;
+}
+.coming_screenImg-1 {
+  position: relative;
+  z-index: 3;
+}
+.coming_screenImg-2 {
+  position: absolute;
+  z-index: 2;
+  top: 96px;
+  right: 120px;
+}
+.coming_screenImg-3 {
+  position: absolute;
+  z-index: 1;
+  top: 152px;
+  right: 94px;
+  width: 1300px;
+  height: 1315px;
 }
 .coming_description {
-  margin-top: 120px;
+  margin-top: 299px;
   color: #fff;
   text-align: center;
   font-size: 35px;
@@ -424,6 +427,7 @@ img {
 }
 
 .footer {
+  padding-top: 40px;
   padding-bottom: 80px;
   width: 100%;
   min-height: 312px;
@@ -437,7 +441,8 @@ img {
   justify-content: space-between;
   width: 100%;
   padding: 0 60px;
-  max-width: 1800px;
+  padding-left: 139px;
+  max-width: 1850px;
 }
 .footer_titleWrapper {
   display: flex;
@@ -447,7 +452,7 @@ img {
 .footer_title {
   display: flex;
   align-items: baseline;
-  gap: 20px;
+  gap: 40px;
   color: #fff;
   text-align: center;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
