--- a/style/style.css
+++ b/style/style.css
@@ -65,12 +65,55 @@ img {
   padding-left: 85px;
   padding-right: 110px;
 }
+@media (max-width: 1439px) {
+  .header {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+@media (max-width: 1200px) {
+  .header {
+    background-image: none;
+  }
+}
+.header_bg-left {
+  display: none;
+}
+@media (max-width: 1200px) {
+  .header_bg-left {
+    display: block;
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    top: 0;
+  }
+}
+.header_bg-right {
+  display: none;
+}
+@media (max-width: 1200px) {
+  .header_bg-right {
+    display: block;
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    right: 0;
+  }
+}
 .header_top {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
 }
+@media (max-width: 1250px) {
+  .header_top {
+    flex-direction: column;
+    gap: 30px;
+  }
+}
 .header_title {
+  position: relative;
+  z-index: 2;
   display: flex;
   gap: 20px;
   color: #fff;
@@ -83,7 +126,7 @@ img {
 }
 @media (max-width: 1439px) {
   .header_title {
-    font-size: 65px;
+    font-size: 40px;
   }
 }
 @media (max-width: 1023px) {
@@ -97,11 +140,22 @@ img {
     margin-top: 70px;
   }
 }
+.header_title img {
+  width: 115px;
+  height: auto;
+}
+@media (max-width: 1439px) {
+  .header_title img {
+    width: 70px;
+  }
+}
 .header_menu {
   display: flex;
   flex-wrap: nowrap;
   gap: 12px;
   margin-top: 10px;
+  position: relative;
+  z-index: 2;
 }
 .header_menuItem {
   text-decoration: none;
@@ -117,25 +171,48 @@ img {
   padding: 2px 38px;
   border-radius: 15px;
 }
+@media (max-width: 1439px) {
+  .header_menuItem {
+    font-size: 25px;
+    padding: 2px 30px;
+  }
+}
 .header_bottom {
   display: flex;
   width: 100%;
   padding-left: 100px;
 }
+@media (max-width: 1919px) {
+  .header_bottom {
+    padding-left: 0;
+  }
+}
 .header_left {
   width: 50%;
-  margin-top: 270px;
+  margin-top: 220px;
   padding-right: 10px;
+}
+@media (max-width: 1919px) {
+  .header_left {
+    margin-top: 70px;
+  }
 }
 .header_right {
   width: 50%;
+  margin-top: 150px;
+}
+@media (max-width: 1919px) {
+  .header_right {
+    margin-top: 70px;
+  }
 }
 .header_right img {
-  margin-top: 150px;
   width: 100%;
   height: auto;
 }
 .header_description {
+  position: relative;
+  z-index: 2;
   color: #fff;
   font-size: 45px;
   font-style: normal;
@@ -143,6 +220,12 @@ img {
   line-height: 75px; /* 166.667% */
   letter-spacing: 1.8px;
   text-transform: uppercase;
+}
+@media (max-width: 1439px) {
+  .header_description {
+    font-size: 30px;
+    line-height: 1.3;
+  }
 }
 .header_link {
   display: inline-flex;
