--- a/style/style.scss
+++ b/style/style.scss
@@ -116,6 +116,12 @@ img {
   padding-right: 110px;
 
   @include vp-1439 {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  @media (max-width: 1200px) {
+    background-image: none;
   }
 
   @include vp-1023 {
@@ -124,13 +130,44 @@ img {
   @include vp-767 {
   }
 
+  &_bg-left {
+    display: none;
+
+    @media (max-width: 1200px) {
+      display: block;
+      position: absolute;
+      z-index: 1;
+      left: 0;
+      top: 0;
+    }
+  }
+
+  &_bg-right {
+    display: none;
+
+    @media (max-width: 1200px) {
+      display: block;
+      position: absolute;
+      z-index: 1;
+      top: 0;
+      right: 0;
+    }
+  }
+
   &_top {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+
+    @media (max-width: 1250px) {
+      flex-direction: column;
+      gap: 30px;
+    }
   }
 
   &_title {
+    position: relative;
+    z-index: 2;
     display: flex;
     gap: 20px;
     color: #fff;
@@ -142,7 +179,7 @@ img {
     line-height: normal;
 
     @include vp-1439 {
-      font-size: 65px;
+      font-size: 40px;
     }
 
     @include vp-1023 {
@@ -153,6 +190,15 @@ img {
       font-size: 40px;
       margin-top: 70px;
     }
+
+    img {
+      width: 115px;
+      height: auto;
+
+      @include vp-1439 {
+        width: 70px;
+      }
+    }
   }
 
   &_menu {
@@ -160,6 +206,8 @@ img {
     flex-wrap: nowrap;
     gap: 12px;
     margin-top: 10px;
+    position: relative;
+    z-index: 2;
   }
 
   &_menuItem {
@@ -175,31 +223,50 @@ img {
     background: #1d1d1f;
     padding: 2px 38px;
     border-radius: 15px;
+
+    @include vp-1439 {
+      font-size: 25px;
+      padding: 2px 30px;
+    }
   }
 
   &_bottom {
     display: flex;
     width: 100%;
     padding-left: 100px;
+
+    @include vp-1919 {
+      padding-left: 0;
+    }
   }
 
   &_left {
     width: 50%;
-    margin-top: 270px;
+    margin-top: 220px;
     padding-right: 10px;
+
+    @include vp-1919 {
+      margin-top: 70px;
+    }
   }
 
   &_right {
     width: 50%;
+    margin-top: 150px;
+
+    @include vp-1919 {
+      margin-top: 70px;
+    }
 
     img {
-      margin-top: 150px;
       width: 100%;
       height: auto;
     }
   }
 
   &_description {
+    position: relative;
+    z-index: 2;
     color: #fff;
     font-size: 45px;
     font-style: normal;
@@ -207,6 +274,11 @@ img {
     line-height: 75px; /* 166.667% */
     letter-spacing: 1.8px;
     text-transform: uppercase;
+
+    @include vp-1439 {
+      font-size: 30px;
+      line-height: 1.3;
+    }
 
     @include vp-1023 {
     }
