--- a/style/style.scss
+++ b/style/style.scss
@@ -300,7 +300,7 @@ img {
 
   &_left {
     width: 50%;
-    margin-top: 220px;
+    margin-top: 258px;
     padding-right: 10px;
 
     @include vp-1919 {
@@ -322,7 +322,7 @@ img {
 
   &_right {
     width: 50%;
-    margin-top: 150px;
+    margin-top: 130px;
 
     @include vp-1919 {
       margin-top: 70px;
@@ -402,14 +402,18 @@ img {
   }
 
   &_adress {
-    margin-top: 40px;
     color: #fff;
-    font-size: 30px;
+    font-size: 25px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
     font-variant: small-caps;
     letter-spacing: 0.6px;
+    word-break: break-all;
+
+    @media (max-width: 1150px) {
+      font-size: 20px;
+    }
 
     @include vp-767 {
       margin-top: 20px;
@@ -575,10 +579,17 @@ img {
 .feature {
   margin-top: 170px;
   width: 100%;
-  background: url('../img/feature-bg.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position-y: 180px;
+
+  @media (max-width: 2650px) {
+    background: url('../img/feature-bg.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-y: -20px;
+  }
+
+  @media (max-width: 2150px) {
+    background-position-y: 180px;
+  }
 
   @include vp-1023 {
     background: none;
@@ -882,6 +893,7 @@ img {
     position: relative;
     color: #000;
     text-align: center;
+    width: 420px;
     font-size: 45px;
     font-style: normal;
     font-weight: 400;
@@ -890,9 +902,10 @@ img {
     border-radius: 10px;
     border: 1px solid #fff;
     background: #43b446;
-    padding: 20px 95px;
+    padding: 20px 30px;
     margin-left: 184px;
     transition: $trans-default;
+    margin-top: 40px;
 
     &:hover,
     &:focus {
@@ -919,6 +932,8 @@ img {
     @include vp-767 {
       font-size: 30px;
       padding: 10px 30px;
+      width: 90%;
+      max-width: 420px;
     }
   }
 
@@ -990,6 +1005,8 @@ img {
     line-height: 40px; /* 114.286% */
     text-transform: uppercase;
     padding: 0 40px;
+    margin-left: auto;
+    margin-right: auto;
 
     @include vp-1919 {
       margin-top: 130px;
@@ -1022,9 +1039,13 @@ img {
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    padding: 0 60px;
-    padding-left: 139px;
-    max-width: 1850px;
+    padding: 0 139px;
+
+    @media (max-width: 2000px) {
+      max-width: 1850px;
+      padding: 0 60px;
+      padding-left: 139px;
+    }
 
     @media (max-width: 1600px) {
       flex-direction: column;
