--- a/style/style.scss
+++ b/style/style.scss
@@ -212,7 +212,7 @@ img {
 
     img {
       width: 115px;
-      height: auto;
+      height: 115px;
 
       @include vp-1439 {
         width: 70px;
